# hermes_pdf_shift_http

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  new features.md  pdf_collection..json
.cargo/: config.toml
src/: collection.rs  error.rs  index.rs  main.rs  shift_indexing.rs  statistics.rs
src/parsing/: mod.rs  shift_parsing.rs  shift_structs.rs
src/shift_indexing/: shift_scructs.rs
