[package]
name = "hermes_pdf_shift_http"
version = "0.1.0"
edition = "2024"

[dependencies]
qpdf = "0.3.3"
regex = "1"
actix-web = "4.10.2"
lopdf = "0.35"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.0", features = ["full"] }
chrono = "0.4.39"
time = {version = "0.3.37", features = ["serde"]}
log = "0.4"
pretty_env_logger = "0.5.0"
walkdir = "2.5"
thiserror = "2"

