[package]
name = "hermes_pdf_shift_http"
version = "0.1.0"
edition = "2024"

[dependencies]
qpdf = "0.3.4"
regex = "1.12.2"
actix-web = "4.11.0"
lopdf = "0.38"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["serde"] }
log = "0.4.28"
pretty_env_logger = "0.5.0"
walkdir = "2.5"
thiserror = "2.0.17"
float-ord = "0.3.2"
